--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-if": "^1.2.5",
     "gulp-insert": "^0.5.0",
     "gulp-minify-css": "^1.2.1",
+    "gulp-minify-html": "^1.0.4",
     "gulp-sass": "^2.0.4",
     "gulp-shell": "^0.4.3",
     "gulp-sourcemaps": "^1.5.2",
