--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "gulp-insert": "^0.5.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
+    "gulp-ng-annotate": "^1.1.0",
     "gulp-sass": "^2.0.4",
     "gulp-shell": "^0.4.3",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.4.1",
     "jspm": "^0.16.9",
     "jspm-bower-endpoint": "^0.3.2",
     "require-dir": "^0.3.0",
