--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^2.9.4",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
+    "gulp-angular-templatecache": "^1.7.0",
     "gulp-ejs": "^1.2.0",
     "gulp-if": "^1.2.5",
     "gulp-insert": "^0.5.0",
