--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "browser-sync": "^2.9.4",
     "del": "^2.0.2",
+    "fs-extra": "^0.24.0",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-ejs": "^1.2.0",
